--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,119 @@
-paste your Appstate 
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261571914255063%22%3A%22fMfvoSg2%22%2C%2261571520882031%22%3A%22TdioxXU6%22%2C%2261571717897645%22%3A%22i4ruShHS%22%2C%22100092375824644%22%3A%22wGNyt0YY%22%2C%2261571906290234%22%3A%22gulBAmrg%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-01-17T19:44:15.242Z",
+        "lastAccessed": "2025-01-17T19:44:15.242Z"
+    },
+    {
+        "key": "datr",
+        "value": "Wdt7Z4qvFR9oMcXhFgMaJIbN",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-17T19:44:15.242Z",
+        "lastAccessed": "2025-01-17T19:44:15.242Z"
+    },
+    {
+        "key": "sb",
+        "value": "Wdt7Z1gtpWctS5v1GvTdMAJF",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-17T19:44:15.242Z",
+        "lastAccessed": "2025-01-17T19:44:15.242Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-17T19:44:15.242Z",
+        "lastAccessed": "2025-01-17T19:44:15.242Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-17T19:44:15.242Z",
+        "lastAccessed": "2025-01-17T19:44:15.242Z"
+    },
+    {
+        "key": "wd",
+        "value": "423x754",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-17T19:44:15.242Z",
+        "lastAccessed": "2025-01-17T19:44:15.242Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61563425273900",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-17T19:44:15.242Z",
+        "lastAccessed": "2025-01-17T19:44:15.242Z"
+    },
+    {
+        "key": "fr",
+        "value": "0jYG37q8fhHb1vbhg.AWVRLPN0CYnrxB8qcPOA1Bq0a8M.Bne9tZ..AAA.0.0.Bnip0O.AWW0vOjLjjo",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-17T19:44:15.242Z",
+        "lastAccessed": "2025-01-17T19:44:15.242Z"
+    },
+    {
+        "key": "xs",
+        "value": "3%3Ah0NJAjohKr5KZg%3A2%3A1737137423%3A-1%3A7710",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-17T19:44:15.242Z",
+        "lastAccessed": "2025-01-17T19:44:15.242Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-17T19:44:15.242Z",
+        "lastAccessed": "2025-01-17T19:44:15.242Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B641x360x1.7004296779632568",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-17T19:44:15.242Z",
+        "lastAccessed": "2025-01-17T19:44:15.242Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100635876%3BT%3A28952382",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-17T19:44:15.242Z",
+        "lastAccessed": "2025-01-17T19:44:15.242Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2716%3Btimestamp%3A1737142963",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-17T19:44:15.242Z",
+        "lastAccessed": "2025-01-17T19:44:15.242Z"
+    }
+]
